--- a/DevTriviaApplication/src/main/resources/templates/index.html
+++ b/DevTriviaApplication/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <!-- I am keeping it simple with just a title, a short tagline, and two buttons for navigation. -->
 
     <!-- I am linking to my CSS file here so I can style the page later if I want. -->
-    <link rel="stylesheet" href="css/style.css">
+    <!--link rel="stylesheet" href="css/style.css"-->
 
     <!-- I am setting a theme color for the browser tab area, just to make it look nicer. -->
     <meta name="theme-color" content="#fafafa">
