Ensures user data properly updates to display on the account page

--- a/DevTriviaApplication/src/main/resources/templates/index.html
+++ b/DevTriviaApplication/src/main/resources/templates/index.html
@@ -20,10 +20,10 @@
 <h1>DevTrivia</h1>
 <nav>
     <ul>
-        <li><a href="game.html">Play</a></li>
-        <li><a href="forum.html">Forums</a></li>
-        <li><a href="account.html">Account</a></li>
-        <li>logout<!--finish later--></li>
+        <li><a href="/game">Play</a></li>
+        <li><a href="/forum">Forums</a></li>
+        <li><a href="/account">Account</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </nav>
 
@@ -38,7 +38,7 @@
 
 <!-- This second form sends the player to the game page. -->
 <!-- When the player clicks Play, the browser will go to game.html where the question appears. -->
-<form action="/game.html">
+<form action="/game">
     <button type="submit">Play</button>
 </form>
 
