--- a/DevTriviaApplication/src/main/resources/templates/game.html
+++ b/DevTriviaApplication/src/main/resources/templates/game.html
@@ -4,20 +4,21 @@
   <meta charset="UTF-8" />
   <title>DevTrivia – Game</title>
   <!-- Load the game logic after the DOM is parsed -->
-  <script src="/game.js" defer></script>
+  <script src="/js/game.js" defer></script>
 
   <!-- This page shows the trivia game screen for my DevTrivia project. -->
 </head>
 
 <body>
 <!-- Title with a link back to the home page -->
-<h1><a href="../">DevTrivia</a></h1>
+<h1><a href="/">DevTrivia</a></h1>
 
 <nav>
   <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/game.html">Play Game</a></li>
-    <li><a href="/profile.html">Profile</a></li>
+    <li><a href="/game">Play</a></li>
+    <li><a href="/forum">Forums</a></li>
+    <li><a href="/account">Account</a></li>
+    <li><a href="/logout">Logout</a></li>
   </ul>
 </nav>
 
