Combined Layla and Mitch's Branches so that admin user privileges, sessions, gameplay, and login all function correctly. Still missing implementation for disabling a user (ensuring they can't log in once they are disabled)

--- a/DevTriviaApplication/src/main/resources/templates/admin/dashboard.html
+++ b/DevTriviaApplication/src/main/resources/templates/admin/dashboard.html
@@ -15,8 +15,8 @@
 <ul>
     <!-- Change these hrefs so they match your actual routes -->
     <li><a th:href="@{/}">Player Home</a></li>
-    <li><a th:href="@{/play}">Play DevTrivia</a></li>
-    <li><a th:href="@{/profile}">My Profile</a></li>
+    <li><a th:href="@{/game}">Play DevTrivia</a></li>
+    <li><a th:href="@{/account}">My Account</a></li>
 </ul>
 
 <hr>
@@ -29,9 +29,9 @@
 
 <hr>
 
-<p>
-    <a th:href="@{/logout}">Log out</a>
-</p>
+<form th:action="@{/logout}" method="post" style="display:inline;">
+    <button type="submit">Logout</button>
+</form>
 
 </body>
 </html>
