--- a/DevTriviaApplication/src/main/resources/templates/game.html
+++ b/DevTriviaApplication/src/main/resources/templates/game.html
@@ -11,16 +11,21 @@
 
 <body>
 <!-- Title with a link back to the home page -->
-<h1><a href="/static">DevTrivia</a></h1>
+<h1><a href="/">DevTrivia</a></h1>
 
 <nav>
   <ul>
-    <li><a href="/game">Play</a></li>
-    <li><a href="/forum">Forums</a></li>
-    <li><a href="/account">Account</a></li>
-    <li><a href="/logout">Logout</a></li>
+    <li><a th:href="@{/game}">Play</a></li>
+    <li><a th:href="@{/forum}">Forums</a></li>
+    <li><a th:href="@{/account}">Account</a></li>
+    <li>
+      <form th:action="@{/logout}" method="post" style="display:inline;">
+        <button type="submit">Logout</button>
+      </form>
+    </li>
   </ul>
 </nav>
+
 
 <!-- Start game button -->
 <button id="play">Play</button>
