--- a/DevTriviaApplication/src/main/resources/templates/account.html
+++ b/DevTriviaApplication/src/main/resources/templates/account.html
@@ -5,16 +5,21 @@
   <title>Account</title>
 </head>
 <body>
-<h1><a href="/static">DevTrivia</a></h1>
+<h1><a href="/">DevTrivia</a></h1>
 <h2>Your Account</h2>
 <nav>
   <ul>
-    <li><a href="/game">Play</a></li>
-    <li><a href="/forum">Forums</a></li>
-    <li><a href="/account">Account</a></li>
-    <li><a href="/logout">Logout</a></li>
+    <li><a th:href="@{/game}">Play</a></li>
+    <li><a th:href="@{/forum}">Forums</a></li>
+    <li><a th:href="@{/account}">Account</a></li>
+    <li>
+      <form th:action="@{/logout}" method="post" style="display:inline;">
+        <button type="submit">Logout</button>
+      </form>
+    </li>
   </ul>
 </nav>
+
 
 <div id="greeting"></div>
 <div id="stats"></div>
