--- a/DevTriviaApplication/src/main/resources/templates/login.html
+++ b/DevTriviaApplication/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>DevTrivia – Login</title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+    <link rel="stylesheet" th:href="@{/css/auth.css}"/>
 </head>
 <body>
 <h1>Login</h1>
