--- a/DevTriviaApplication/src/main/resources/templates/reset.html
+++ b/DevTriviaApplication/src/main/resources/templates/reset.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8"/>
     <title>Reset Password</title>
     <link rel="stylesheet" th:href="@{/css/auth.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
 <body>
 <div class="card">
