--- a/DevTriviaApplication/src/main/resources/templates/account.html
+++ b/DevTriviaApplication/src/main/resources/templates/account.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Account</title>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
 <body>
 <h1><a href="/">DevTrivia</a></h1>
