--- a/DevTriviaApplication/src/main/resources/templates/game.html
+++ b/DevTriviaApplication/src/main/resources/templates/game.html
@@ -5,6 +5,8 @@
   <title>DevTrivia – Game</title>
   <!-- Load the game logic after the DOM is parsed -->
   <script src="/js/game.js" defer></script>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+  <!--static/css/style.css-->
 
   <!-- This page shows the trivia game screen for my DevTrivia project. -->
 </head>
