--- a/DevTriviaApplication/src/main/resources/templates/register.html
+++ b/DevTriviaApplication/src/main/resources/templates/register.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head><meta charset="UTF-8"><title>DevTrivia – Register</title></head>
+<head>
+    <meta charset="UTF-8"><title>DevTrivia – Register</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
+</head>
 <body>
 <h1>Create Account</h1>
 
