--- a/DevTriviaApplication/src/main/resources/templates/game.html
+++ b/DevTriviaApplication/src/main/resources/templates/game.html
@@ -12,30 +12,31 @@
 </head>
 
 <body>
-<!-- Title with a link back to the home page -->
-<h1><a href="/">DevTrivia</a></h1>
+<header class="forum-header">
+    <div class="forum-header-inner">
+        <a href="/" class="forum-logo">
+            DevTrivia<span>Game</span>
+        </a>
+        <nav class="forum-nav">
+            <a th:href="@{/game}" class="forum-nav-link forum-nav-link-active">Play</a>
+            <a th:href="@{/forum}" class="forum-nav-link">Forum</a>
+            <a th:href="@{/account}" class="forum-nav-link">Account</a>
+            <form th:action="@{/logout}" method="post" class="logout-form">
+                <button type="submit" class="btn-primary">Logout</button>
+            </form>
+        </nav>
+    </div>
+</header>
 
-<nav>
-  <ul>
-    <li><a th:href="@{/game}">Play</a></li>
-    <li><a th:href="@{/forum}">Forums</a></li>
-    <li><a th:href="@{/account}">Account</a></li>
-    <li>
-      <form th:action="@{/logout}" method="post" style="display:inline;">
-        <button type="submit">Logout</button>
-      </form>
-    </li>
-  </ul>
-</nav>
-
-
+<main class="game-wrapper">
 <!-- Start game button -->
-<button id="play">Play</button>
+    <button id="play" class="btn-primary">Play</button>
 
 <!-- This container is where I will inject the question, choices, and result message. -->
 <div id="app"><p></p></div>
 
 <!-- Exit button (no form, handled entirely in JS) -->
-<button type="button" id="exit-button">Exit</button>
+    <button type="button" id="exit-button" class="btn-secondary">Exit</button>
+</main>
 </body>
 </html>
