--- a/DevTriviaApplication/src/main/resources/templates/admin/user_edit.html
+++ b/DevTriviaApplication/src/main/resources/templates/admin/user_edit.html
@@ -3,53 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit User</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}"/>
 </head>
 <body>
-<h1>Edit User</h1>
 
-<form th:action="@{|/admin/users/${form.id}/edit|}" method="post" th:object="${form}">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+<div class="admin-wrapper">
+    <div class="admin-card">
 
-    <p>
-        <label>ID:
-            <input type="text" th:field="*{id}" readonly>
-        </label>
-    </p>
+        <h1>Edit User</h1>
 
-    <p>
-        <label>Username:
-            <input type="text" th:field="*{username}" required>
-        </label>
-    </p>
+        <form th:action="@{|/admin/users/${form.id}/edit|}" method="post" th:object="${form}">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-    <p>
-        <label>Email:
-            <input type="email" th:field="*{email}">
-        </label>
-    </p>
+            <p>
+                <label>ID:
+                    <input type="text" th:field="*{id}" readonly>
+                </label>
+            </p>
 
-    <p>
-        <label>Admin:
-            <input type="checkbox" th:field="*{admin}">
-        </label>
-    </p>
+            <p>
+                <label>Username:
+                    <input type="text" th:field="*{username}" required>
+                </label>
+            </p>
 
-    <p>
-        <label>Enabled:
-            <input type="checkbox" th:field="*{enabled}">
-        </label>
-    </p>
+            <p>
+                <label>Email:
+                    <input type="email" th:field="*{email}">
+                </label>
+            </p>
 
-    <p>
-        <label>New Password (optional):
-            <input type="password" th:field="*{newPassword}">
-        </label>
-    </p>
+            <p>
+                <label>Admin:
+                    <input type="checkbox" th:field="*{admin}">
+                </label>
+            </p>
 
-    <p>
-        <button type="submit">Save</button>
-        <a th:href="@{/admin/users}">Cancel</a>
-    </p>
-</form>
+            <p>
+                <label>Enabled:
+                    <input type="checkbox" th:field="*{enabled}">
+                </label>
+            </p>
+
+            <p>
+                <label>New Password (optional):
+                    <input type="password" th:field="*{newPassword}">
+                </label>
+            </p>
+
+            <button type="submit" class="btn-primary">Save</button>
+            <a th:href="@{/admin/users}" class="btn-secondary">Cancel</a>
+        </form>
+
+    </div>
+</div>
+
 </body>
 </html>
