--- a/DevTriviaApplication/src/main/resources/templates/forum.html
+++ b/DevTriviaApplication/src/main/resources/templates/forum.html
@@ -21,7 +21,7 @@
 <div class="forum-header-inner">
     <a href="/" class="forum-logo">DevTrivia<span>Forum</span></a>
     <nav class="forum-nav" aria-label="Primary">
-        <a href="/" class="forum-nav-link">Play</a>
+        <a href="/game" class="forum-nav-link">Play</a>
         <a href="/account" class="forum-nav-link">Account</a>
         <a href="/forum" class="forum-nav-link forum-nav-link-active" aria-current="page">Forum</a>
         <form th:action="@{/logout}" method="post" class="logout-form">
@@ -95,7 +95,7 @@
             <div class="forum-post-meta">
                             <span class="forum-post-author">
                                 <span class="sr-only">Posted by</span>
-                                User #<strong th:text="${post.userId}">1</strong>
+                                <strong th:text="${post.username}">username</strong>
                             </span>
 
               <!-- Format Local time/date of post -->
