Fully functional site

--- a/DevTriviaApplication/src/main/resources/templates/admin/dashboard.html
+++ b/DevTriviaApplication/src/main/resources/templates/admin/dashboard.html
@@ -31,7 +31,7 @@
         <hr>
         <h2>Admin options</h2>
         <ul>
-            <li><a th:href="@{/}">Admin Home</a></li>
+            <li><a th:href="@{/static}">Admin Home</a></li>
             <li><a th:href="@{/admin/users}">Manage Users</a></li>
         </ul>
 
